--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 *{margin: 0px; padding: 0px;}
 
 body{  font-family: "Open Sans", sans-serif !important; background: #ebe9e9; overflow-x: hidden;}
+body.dark{background: #071739 !important;}
 
 ::-webkit-scrollbar{width: 5px !important; height: 5px !important;}
 ::-webkit-scrollbar-thumb{background: #0858f7 !important;}
@@ -30,11 +31,19 @@ color: #fff !important; text-transform: capitalize !important; border-radius: 5p
 header{width: 100%; height: 70px; background: rgba(255, 255, 255, 0.9); position: fixed; top: 0px; left: 0px; z-index: 1000;
 -webkit-backdrop-filter: blur(5px);
 backdrop-filter: blur(5px);}
+
+body.dark header{background: #112143 !important;}
+
 header .logo{text-decoration: none;}
 header .logo img{width: 45px;}
 header .logo span {color: #292929; font-weight: 800; font-size: 24px;}
+body.dark header .logo span{color: #fff !important; opacity: 0.9;}
 
 header button.rounded-circle{min-width: 40px !important; width: 40px !important; height: 40px !important; background: #f0f5ff !important; color: #0858f7;}
+
+body.dark header button.rounded-circle{background: #112755 !important;}
+body.dark header button.rounded-circle svg{color: #fff !important;}
+
 header button.rounded-circle svg{color: #292929; font-size: 18px !important;}
 
 header button.rounded-circle:hover svg{color: #0858f7 !important;}
@@ -42,8 +51,14 @@ header button.rounded-circle:hover svg{color: #0858f7 !important;}
 header .part2{padding-left: 50px;}
 
 .searchBox{width: 400px; height: 40px; background: #f0f5ff; border-radius: 6px; padding: 3px 15px;}
+
+body.dark .searchBox{ background: #12254e;}
+
+
 .searchBox input{background: transparent; border: 0px; outline: none; padding-left: 0px; font-size: 14px; color: #292929;}
 .searchBox input::-webkit-input-placeholder{color: rgba(0, 0, 0, 0.6);}
+
+body.dark .searchBox input,body.dark .searchBox input::-webkit-input-placeholder,body.dark .searchBox svg{color: rgba(255, 255, 255, 0.7);}
 
 .searchBox svg{font-size: 18px; color: #292929;}
 
@@ -56,6 +71,10 @@ header .part2{padding-left: 50px;}
 .myAcc .userInfo h4{font-size: 15px; font-weight: 600; margin-bottom: 0px; color: #292929;}
 .myAcc .userInfo p{margin-top: 0px; font-size: 12px; color: #000; opacity: 0.7;}
 
+body.dark .myAcc .userInfo *{color: rgba(255,255,255,0.8) !important;}
+body.dark .MuiPaper-elevation{background-color: #12254e !important;}
+body.dark .MuiPaper-elevation li *,body.dark .MuiPaper-elevation li{color: rgba(255,255,255,0.8) !important;}
+
 #account-menu li{font-size: 14px !important; padding: 12px 15px !important;}
 #acccount-menu li svg {font-size: 20px !important}
 
@@ -64,8 +83,11 @@ top: 70px !important;}
 
 .dropdown_list .head{padding: 10px 0px;}
 .dropdown_list .head h4{font-size: 17px; font-weight: 600;}
+body.dark .dropdown_list .head h4{color: rgba(255,255,255,0.9) !important;}
 .dropdown_list li.MuiButtonBase-root{background: #ebf6ff !important; color:#000 !important;
 color: #000 !important; padding: 10px 15px !important;}
+
+       body.dark .dropdown_list li.MuiButtonBase-root{background-color: #12254e !important; background: #12254e !important;}
 
         .dropdown_list li.MuiButtonBase-root:hover{background: #ebf6ff !important;}
 
@@ -82,10 +104,11 @@ color: #000 !important; padding: 10px 15px !important;}
 .main .sidebarWrapper{width: 20%; flex: 0 0 20%; transition: all 0.3s ease-in-out;}
 .main .sidebarWrapper.toggle{width: 0%; flex: 0 0 0%;}
 
-
 .main .sidebarWrapper .sidebar{width: 20%; height: 100vh; max-height: calc(100% - 70px); position: fixed; 
 top: 70px; left: 0px; background: #fff; overflow-y: scroll; overflow-x: hidden; padding-bottom: 40px;
 transition: all 0.3s;}
+
+body.dark .main .sidebarWrapper .sidebar{background: #112143 !important;}
 
 .main .sidebarWrapper.toggle .sidebar{left: -100%;}
 
@@ -100,6 +123,8 @@ left; border-radius: 10px !important; padding: 12px 10px !important; align-items
 text-transform: capitalize !important; font-weight: 600 !important; font-family: "Open Sans", sans-serif !important;
 font-size: 15px !important;}
 
+body.dark .main .sidebarWrapper .sidebar ul li button{color: rgba(255,255,255,0.8) !important;}
+
 .main .sidebarWrapper .sidebar ul li button .icon{display: flex; align-items: center;
 justify-content: center; width: 25px; height: 25px; margin-right: 10px;}
 .main .sidebarWrapper .sidebar ul li button .icon svg{font-size: 22px;}
@@ -111,18 +136,24 @@ justify-content: center; width: 25px; height: 25px; margin-right: 10px;}
 justify-content: center; width: 25px; height: 25px; transition: all 0.3s ease-in-out;}
 
 .main .sidebarWrapper .sidebar ul li button:hover{background: #f1f1f1 !important;}
+body.dark .main .sidebarWrapper .sidebar ul li button:hover{background: rgba(255, 255, 255, 0.1) !important;}
 .main .sidebarWrapper .sidebar ul li button.active{background: #f1f1f1 !important;}
+body.dark .main .sidebarWrapper .sidebar ul li button.active{background: rgba(255, 255, 255, 0.1) !important;}
 .main .sidebarWrapper .sidebar ul li button.active .icon svg{color: #0858f7 !important;}
 .main .sidebarWrapper .sidebar ul li button.active .arrow{transform: rotate(90deg);}
 .main .sidebarWrapper .sidebar ul .submenu{padding: 0px 45px; position: relative; transition: 
 all 0.3s; height: 0px;}
 .main .sidebarWrapper .sidebar ul .submenu::before{content: ''; width: 1px; height: 95%;
 position: absolute; top: 0px; left: 25px; background: rgba(0, 0, 0, 0.2);}
+body.dark .main .sidebarWrapper .sidebar ul .submenu::before{background: rgba(255, 255, 255, 0.2);}
 .main .sidebarWrapper .sidebar ul .submenu li{width: 100%; list-style: none; }
 .main .sidebarWrapper .sidebar ul .submenu li a{color: #5e5d72 !important; text-decoration: 
 none; display: block; padding:  6px 0px; font-size: 14px; font-weight: 500; transition: all 0.3s;}
 
+body.dark .main .sidebarWrapper .sidebar ul .submenu li a{color: rgba(255, 255, 255, 0.7) !important;}
+
 .main .sidebarWrapper .sidebar ul .submenu li a:hover{color: #0858f7 !important;}
+body.dark .main .sidebarWrapper .sidebar ul .submenu li a:hover{color: #0858f7 !important;}
 
 .main .sidebarWrapper .sidebar ul .submenuWrapper{transition: all 0.4s; height: 0px; overflow: 
 hidden; opacity: 0;}
@@ -134,6 +165,8 @@ hidden; opacity: 0;}
 .logoutWrapper {padding: 0px 25px;}
 .logoutWrapper .logoutBox{width: 100%; height: 130px; padding: 25px; background: #bcd2fd; border-radius: 
 10px; display: flex; align-items: center; justify-content: center; position: relative; overflow: hidden;}
+
+body.dark .logoutWrapper .logoutBox{background: transparent; background-image: linear-gradient(to bottom, #183e8c, #163474);}
 
 .logoutWrapper .logoutBox::before{content: ''; width: 70px; height: 70px; background: #0858f7;
 border-radius: 100%; position: absolute; top: -20px; right: -30px; opacity: 0.5;}
@@ -194,14 +227,27 @@ border-radius: 50 !important;}
 .card{margin: 15px 0px; border-radius: 10px;}
 .card .hd{font-size: 18px; font-weight: bold; color: #403e57;}
 
+body.dark .card{background: #112143 !important;}
+body.dark .card .hd{font-size: 18px; font-weight: bold; color: rgba(255, 255, 255, 0.8);}
+
 .cardFilters .col-md-3 h4{font-size: 14px; font-weight: 800; text-transform: capitalize; color:
 #403e57;}
 
 h1, h2, h3, h4, h5, h6, p{color: #403e57}
 
+body.dark .css-sc8y68-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root, body.dark h1, 
+body.dark h2,
+body.dark h3,
+body.dark h4,
+body.dark h6,
+body.dark p, body.dark .css-1rfqz7c-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon, body.dark 
+.css-bpeome-MuiSvgIcon-root-MuiSelect-icon{color: rgba(255, 255, 255, 0.8) !important;}
+
+body.dark .css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline{border-color: rgba(255,255,255,0.8) !important;}
+
 .table-responsive::-webkit-scrollbar-thumb{background: #ccc !important;}
 
-.table .table-dark th{background-color: #1866ee !important; border-color: rgba(255, 255, 255, 0.1 ) !important;
+.table .table-dark th{background-color: #1866ee !important; border-color: rgba(255, 255, 255, 0.3) !important;
 font-size: 13px !important; margin: 0px 3px !important;}
 
 
@@ -240,9 +286,16 @@ white-space: nowrap; color: #5e5d72; margin-bottom: 0px;}
  table.v-align td .productBox{width: 270px;}
 
  .tableFooter{padding-bottom: 20px;}
+ .tableFooter p{ font-size: 14px; font-weight: 500; margin-bottom: 0px;}
  .tableFooter .pagination{margin-left: auto;}
 
- .tableFooter p{ font-size: 14px; font-weight: 500; margin-bottom: 0px;}
+ .tableFooter p{font-size: 14px; font-weight: 500; margin-bottom: 0px;}
+
+ body.dark table td{color: rgba(255,255,255,0.7) !important;}
+
+ .css-1to7aaw-MuiButtonBase-root-MuiPaginationItem-root.Mui-selected{background-color: #0858f7 !important;}
+
+ 
  
  .css-1bug3cd-MuiButtonBase-root-MuiPaginationItem-root.Mui-selected{background-color: #0858f7
 !important;}
