--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,8 @@ h1, h2, h3, h4, h5, h6, p{color: #403e57;}
 
 p{font-weight: 300; font-size: 15px; line-height: 25px;}
 
+body.light p{font-weight: 400 !important;}
+
 h4{line-height: 32px;}
 
 .btn-blue{background: #0858f7 !important; font-size: 14px !important; font-weight: 600 !important;
@@ -362,14 +364,20 @@ padding-top: 10px !important;}
 .signUpSection .part1 h1{font-size: 50px; font-weight: 800;}
 .signUpSection .part1 p{font-size: 18px; font-weight: 500;}
 
+.sliderSml .slick-current .item{border: 1px dashed #ccc !important;}
+
+
 .sliderSml .slick-slide{padding-right: 10px;}
 .sliderSml .slick-slide .item{border-radius: 7px !important; overflow: hidden;}
 
 .sliderSml *, .sliderBig *{transition: all 0.2s !important;}
-.sliderBig{overflow: hidden; border-radius: 10px;}
+.sliderBig .item{overflow: hidden; border-radius: 7px; border: 2px dashed #ccc !important;}
+.sliderSml .item{overflow: hidden; border-radius: 7px; border: 2px dashed #ccc !important;
+cursor: pointer;}
+
 
 .productDetailsSEction .productInfo .icon{width: 28%; flex: 0 0 28%}
-.productDetailsSEction .productInfo .icon svg{font-size: 22px;}
+.productDetailsSEction .productInfo .icon svg{color: #5e5d72 !important;}
 .productDetailsSEction .productInfo .name{width: 72%; flex: 0 0 72%; font-weight: 600;
 font-size: 15px; color: rgba(255, 255, 255, 0.8) !important;}
 
@@ -382,18 +390,54 @@ padding-left: 20px;}
 .tags li span{display: flex; align-items: center; justify-content: center; background: #1b2b4d !important;
 border-radius: 5px !important; font-size: 13px !important; padding: 5px 10px !important;}
 
+.tags li{margin: 3px 5px !important}
+
+body.light .tags li span{background: #f0f0f0 !important; color: #000 !important; padding: 4px 10px !important;}
+
 .tags li span:first-child{padding-left: 0px !important;}
 
 .ratingSection{width: 500px;}
 .ratingSection .ratingrow{width: 100%; margin-bottom: 15px !important;}
 .ratingSection .ratingrow .progress{height: 5px !important; background-color: #000 !important;}
 .ratingSection .ratingrow .progress .progress-bar{background: #edb213 !important;}
+
+body.light .ratingSection .ratingrow .progress{background: #ccc !important;}
+
 .ratingSection .ratingrow .col1{width: 15%; flex: 0 0 15%; display: flex;}
 .ratingSection .ratingrow .col2{width: 50%; flex: 0 0 50%;}
 .ratingSection .ratingrow .col3{width: 25%; flex: 0 0 25%; display: flex; padding-left: 20px;}
 
 .reviewsSecrion{width: 100%; display: flex; flex-direction: column;}
 .reviewsSecrion .reviewsRow{width: 100%; height: auto; background: #071739; padding: 35px; 
-border-radius: 10px;}
+border-radius: 10px; margin: 15px 0px}
+
+body.light .reviewsSecrion .reviewsRow{background: #f8f8f8 !important;}
 
 .userInfo h6{margin-bottom: 0px;}
+
+.reviewsSecrion .reviewsRow p{padding-left: 20px;}
+
+.reviewsSecrion .reviewsRow.reply{width: 90%; margin-left: auto;}
+
+.reviewsSecrion .reviewsRow .btn-big{font-size: 15px !important;}
+
+.reviewsSecrion .reviewsRow .btn-big svg{font-size: 18px !important;}
+
+.reviewForm{width: 100%;}
+.reviewForm textarea{width: 100%; height: 200px; background: #132345 !important; outline: navajowhite !important; padding: 15px; border-radius: 10px; color: rgba(255, 255, 255, 0.7); border: 1px solid #132345 !important;}
+
+body.light .reviewForm textarea{background: #f4f4f4 !important; color: rgba(0, 0, 0, 0.8) !important;
+border: 1px solid #dbdbdb !important;}
+
+.reviewForm textarea::-webkit-input-placeholder{color: rgba(255,255,255,0.5);}
+body.light .reviewForm textarea::-webkit-input-placeholder{color: rgba(0,0,0,0.5);}
+
+.form .form-group{margin-bottom: 15px;}
+.form .form-group h6{margin-bottom: 10px; font-size: 13px;}
+.form .form-group input,.form .form-group textarea{background: #fafafa; width: 100%; outline: none !important; border: 1px solid rgba(0, 0, 0, 0.1) !important;
+height: 40px; padding-left: 15px; border-radius: 5px; font-size: 14px;}
+
+.form .form-group textarea{height: 120px; padding-top: 15px;}
+
+body.dark .form .form-group input,body.dark .form .form-group textarea{background: #2b3c5f !important; 
+border: 1px solid #253557 !important; color: rgba(255, 255, 255, 0.8) !important;}
